--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,10 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
     "nuxt": "^3.6.5"
+  },
+  "dependencies": {
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.32.2"
   }
 }
