--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.2",
+    "gh-pages": "^6.0.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.32.2"
   },
