--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,4 @@
+version: '2.20.3'
 services:
   mysql:
     image: 'mysql:latest'
@@ -8,3 +9,8 @@ services:
       - 'MYSQL_USER=myuser'
     ports:
       - '3306'
+    volumes:
+      - mysql:/data/db
+volumes:
+  mysql:
+    driver: local
