--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -33,12 +33,4 @@ jobs:
         run: npm run generate
 
       - name: Deploy to GitHub Pages
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git checkout --orphan gh-pages
-          git rm -rf .
-          mv dist/* .
-          git add .
-          git commit -m "Deploy Nuxt.js to GitHub Pages"
-          git push -f origin gh-pages
+        run: npm run deploy
